--- a/app/views/error/ie.html.erb
+++ b/app/views/error/ie.html.erb
@@ -56,7 +56,7 @@
         </a>
       </h2>
       <h2>
-        <a target="_blank" href="https://www.mozilla.org/es-MX/firefox/new/">
+        <a target="_blank" href="https://www.apple.com/mx/safari/">
           <i class="fa fa-fw fa-safari"></i> Safari 6.0.2 <i class="fa fa-fw fa-external-link"></i>
         </a>
       </h2>
