--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <div class="ibox-content">
           <div class="row">
             <div class="col-md-12">
-              <div class="alert alert-warning">
+              <div class="alert alert-warning text-justify">
                 El contenido presente es una adaptación del Reglamento de Tránsito de la Ciudad de México, emitido el 17 de agosto de 2015.
                 <a target="_blank" class="alert-link" href="http://data.ssp.cdmx.gob.mx/reglamentodetransito/documentos/nuevo_reglamento_transito.pdf">Descargar reglamento en PDF <i class="fa fa-external-link"></i> </a>
               </div>
@@ -53,32 +53,34 @@
                   <h4 class="text-uppercase"><i class="fa fa-book"></i> Lo que puedes y no puedes hacer al conducir:</h4>
                   <ul class="unordered-list">
                     <li>Deberás contar con póliza de seguro que ampare la responsabilidad civil por daños a terceros en su persona y en su patrimonio. Las sanciones son:
-                      <table class="table table-bordered white-bg">
-                        <thead>
-                        <tr>
-                          <th class="text-center">Tipo de vehículo</th>
-                          <th class="text-center">Sanción con multa equivalente en veces la Unidad de Cuenta de la Ciudad de México vigente</th>
-                          <th class="text-center">Puntos de penalización en licencia para conducir</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                          <td class="text-center">Conductores de vehículos de uso particular</td>
-                          <td class="text-center">20 a 40 veces</td>
-                          <td class="text-center">No aplica</td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">Conductores de vehículos de transporte de carga</td>
-                          <td class="text-center">40 a 60 veces y la remisión del vehículo al depósito</td>
-                          <td class="text-center">No aplica</td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">Conductores de vehículos de transporte público de pasajeros</td>
-                          <td class="text-center">60 a 80 veces y la remisión del vehículo al depósito</td>
-                          <td class="text-center">No aplica</td>
-                        </tr>
-                        </tbody>
-                      </table>
+                      <div class="table-responsive">
+                        <table class="table table-bordered white-bg">
+                          <thead>
+                          <tr>
+                            <th class="text-center">Tipo de vehículo</th>
+                            <th class="text-center">Sanción con multa equivalente en veces la Unidad de Cuenta de la Ciudad de México vigente</th>
+                            <th class="text-center">Puntos de penalización en licencia para conducir</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr>
+                            <td class="text-center">Conductores de vehículos de uso particular</td>
+                            <td class="text-center">20 a 40 veces</td>
+                            <td class="text-center">No aplica</td>
+                          </tr>
+                          <tr>
+                            <td class="text-center">Conductores de vehículos de transporte de carga</td>
+                            <td class="text-center">40 a 60 veces y la remisión del vehículo al depósito</td>
+                            <td class="text-center">No aplica</td>
+                          </tr>
+                          <tr>
+                            <td class="text-center">Conductores de vehículos de transporte público de pasajeros</td>
+                            <td class="text-center">60 a 80 veces y la remisión del vehículo al depósito</td>
+                            <td class="text-center">No aplica</td>
+                          </tr>
+                          </tbody>
+                        </table>
+                      </div>
                       <p>El propietario del vehículo particular tendrá 45 días naturales para la cancelación de la multa, al presentar ante Seguridad Pública una póliza de seguro de responsabilidad civil por daños a terceros, en los términos de la Ley, dentro del término estipulado.</p>
                     </li>
                     <li>No podrás utilizar objetos que representen un distractor para el conductor mientras el vehículo esté en movimiento, como son: navegadores GPS, teléfono celular o cualquier dispositivo de comunicación.</li>
@@ -102,37 +104,39 @@
                     <li>En estacionamientos y en vías peatonales la velocidad máxima será de 10 km/h</li>
                   </ol>
                   <p>El incumplimiento de las obligaciones sobre velocidad por parte de los automovilistas se sancionará de acuerdo a la siguiente tabla:</p>
-                  <table class="table table-bordered white-bg">
-                    <thead>
-                    <tr>
-                      <th class="text-center">Fracción</th>
-                      <th class="text-center">Sanción con multa equivalente en veces la Unidad de Cuenta de la Ciudad de México vigente</th>
-                      <th class="text-center">Puntos de penalización en licencia para conducir</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td class="text-center">1, 2 y 3</td>
-                      <td class="text-center">10 o 20 veces</td>
-                      <td class="text-center">3 puntos</td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">4, 5 y 6</td>
-                      <td class="text-center">10 o 20 veces</td>
-                      <td class="text-center">6 puntos</td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">2 y 3 para conductores de vehículos de transporte público de pasajeros y de carga</td>
-                      <td class="text-center">10 o 20 veces</td>
-                      <td class="text-center">3 puntos</td>
-                    </tr>
-                    <tr>
-                      <td class="text-center">4, 5 y 6 para conductores de vehículos de transporte público de pasajeros y de carga</td>
-                      <td class="text-center">20 a 30 veces</td>
-                      <td class="text-center">6 puntos</td>
-                    </tr>
-                    </tbody>
-                  </table>
+                  <div class="table-responsive">
+                    <table class="table table-bordered white-bg">
+                      <thead>
+                      <tr>
+                        <th class="text-center">Fracción</th>
+                        <th class="text-center">Sanción con multa equivalente en veces la Unidad de Cuenta de la Ciudad de México vigente</th>
+                        <th class="text-center">Puntos de penalización en licencia para conducir</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr>
+                        <td class="text-center">1, 2 y 3</td>
+                        <td class="text-center">10 o 20 veces</td>
+                        <td class="text-center">3 puntos</td>
+                      </tr>
+                      <tr>
+                        <td class="text-center">4, 5 y 6</td>
+                        <td class="text-center">10 o 20 veces</td>
+                        <td class="text-center">6 puntos</td>
+                      </tr>
+                      <tr>
+                        <td class="text-center">2 y 3 para conductores de vehículos de transporte público de pasajeros y de carga</td>
+                        <td class="text-center">10 o 20 veces</td>
+                        <td class="text-center">3 puntos</td>
+                      </tr>
+                      <tr>
+                        <td class="text-center">4, 5 y 6 para conductores de vehículos de transporte público de pasajeros y de carga</td>
+                        <td class="text-center">20 a 30 veces</td>
+                        <td class="text-center">6 puntos</td>
+                      </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </section>
                 <h3><i class="fa fa-fw fa-bicycle"></i> Ciclista</h3>
                 <section class="animated fadeIn">
@@ -177,7 +181,7 @@
                     <li>Hacer base o estacionar su vehículo en lugares no autorizados o prohibidos.</li>
                     <li>Cargar combustible llevando pasajeros a bordo.</li>
                     <li>Llevar vidrios polarizados, obscurecidos o con aditamentos u objetos distintos a las calcomanías reglamentarias.</li>
-                    <li>Si no cuentan con una póliza de seguro, los concesionario de unidad de transporte público de pasajeros serán acreedores de una multa y la remisión del vehículo al depósito.</li>
+                    <li>Si no cuentan con una póliza de seguro, los concesionarios de unidades de transporte público de pasajeros serán acreedores de una multa y la remisión del vehículo al depósito.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
                   <h4 class="text-uppercase"><i class="fa fa-check"></i> Lo que debes hacer:</h4>
@@ -210,7 +214,7 @@
                     <li>Circular por el carril de la extrema derecha y usar el izquierdo sólo para rebasar o dar vuelta a la izquierda.</li>
                     <li>No podrán circular por carriles centrales y segundos niveles de las vías de acceso controlado cuando se trate de vehículos de peso bruto vehicular de diseño superior a 3,857 kg o donde el señalamiento restrictivo así lo indique.</li>
                     <li>Realizar maniobras de carga y descarga en lugares seguros y sin afectar o interrumpir el tránsito vehicular.</li>
-                    <li>Los conductores de vehículos de transporte de carga deben circular con la carga debidamente asegurada por tensadores para sujetar carga, cintas y/o lonas, que evite tirar objetos o derramar sustancias que obstruyan el tránsito o pongan en riesgo la integridad física de las personas.</li>
+                    <li>Los conductores de vehículos de transporte de carga deben circular con la carga debidamente asegurada por tensores para sujetar carga, cintas y/o lonas, que evite tirar objetos o derramar sustancias que obstruyan el tránsito o pongan en riesgo la integridad física de las personas.</li>
                     <li>No deberán circular con pasajeros que viajen en el área de carga.</li>
                     <li>Tienen prohibido circular con carga que exceda el peso permitido al establecido en las normas aplicables.</li>
                   </ol>
