--- a/app/views/quiz_user/consulta.html.erb
+++ b/app/views/quiz_user/consulta.html.erb
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-md-12">
               <p class="text-success"> Respuesta correcta. <i class="fa fa-check"></i></p>
-              <p class="text-danger"> Respuesta de usuario erronea. <i class="fa fa-times"></i></p>
+              <p class="text-danger"> Respuesta de usuario errónea. <i class="fa fa-times"></i></p>
             </div>
           </div>
         </div>
