--- a/app/views/simulation_user/index.html.erb
+++ b/app/views/simulation_user/index.html.erb
@@ -35,7 +35,7 @@
                   </div>
                   <div class="row p-w-xs">
                     <hr>
-                    <div class="col-lg-4"><b>Obstaculos Derribados:</b></div>
+                    <div class="col-lg-4"><b>Obstáculos Derribados:</b></div>
                     <% if simulation.get_estado > 1 %>
                       <div class="col-lg-8"><%= simulation.obstaculos_derribados %></div>
                     <% else%>
