--- a/app/assets/stylesheets/base/custom.scss
+++ b/app/assets/stylesheets/base/custom.scss
@@ -83,4 +83,9 @@ body{
   opacity: 0.60;
 }
 
+img.circle-border {
+  border: 6px solid $navy_pale;
+  border-radius: 50% !important;
+}
+
 @media screen and (max-height: 575px){ #rc-imageselect, .g-recaptcha {transform:scale(0.77);-webkit-transform:scale(0.77);transform-origin:0 0;-webkit-transform-origin:0 0;} }
