--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -83,6 +83,12 @@
               </li>
             <% end %>
 
+          <li class="<%= 'active' if (current_page?(about_path)) %>">
+            <%= link_to about_path do %>
+              <i class="fa fa-fw fa-info-circle"></i> <span class="nav-label">Acerca de...</span>
+            <% end %>
+          </li>
+
         </ul>
 
     </div>
