--- a/app/views/quiz_eval/index.html.erb
+++ b/app/views/quiz_eval/index.html.erb
@@ -66,6 +66,12 @@
                                 <span class="btn btn-sm btn-mg btn-primary" data-toggle="tooltip" data-placement="top" title="Consultar"><i class="fa fa-search"></i></span>
                               <% end %>
                             <% end %>
+
+                            <% if quiz.puntaje >= 8 && !quiz.simulation.fecha_aplicacion.blank? %>
+                              <%= link_to simulation_endpoint_show_path(quiz.id, format: "pdf"), target: :_blank do %>
+                                <span class="btn btn-sm btn-mg btn-danger" data-toggle="tooltip" data-placement="top" title="Generar Dictamen"><i class="fa fa-file-pdf-o"></i> Generar Dictamen</span>
+                              <% end %>
+                            <% end %>
                           </td>
                         </tr>
                       <% end %>
