--- a/app/views/simulation_user/index.html.erb
+++ b/app/views/simulation_user/index.html.erb
@@ -69,6 +69,17 @@
                       <div class="col-lg-8">-</div>
                     <% end %>
                   </div>
+                  <div class="row p-h-xs">
+                    <div class="col-lg-12">
+                      <div class="text-right">
+                        <% if simulation.quiz.puntaje >= 8 && !simulation.quiz.simulation.fecha_aplicacion.blank? %>
+                            <%= link_to simulation_endpoint_show_path(simulation.quiz.id, format: "pdf"), target: :_blank do %>
+                              <span class="btn btn-xs btn-mg btn-primary"><i class="fa fa-file-pdf-o"></i> Generar Dictamen</span>
+                            <% end %>
+                          <% end %>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             <% end %>
